# bleak-bumble_dev_host_mode

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
bleak_bumble/: __init__.py  client.py  client.py.bak  scanner.py  utils.py
docs/: README.md  api.md  examples.md  installation.md  usage.md
examples/: client_change_connection_phy.py  connect_to_a_device_found_by_name.py  le_ext_adv_scanner.py  simple_scan.py
tests/: conftest.py  test_client_characteristics.py  test_client_connecting.py  test_client_descriptors.py  test_client_pairing.py  test_client_properties.py  test_connection.py  test_issue_1885.py  test_scanner.py  test_scanner2.py  test_utils.py
